// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DrugCard — restyle snapshots > LTR snapshot (lang=en, no bookmark) 1`] = `
<Pressable
  accessibilityLabel="Amoxicillin, Antibacterials"
  accessibilityRole="button"
  onClick={[MockFunction spy]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="drug-card-J01CA04"
>
  <View
    accessibilityRole="none"
  >
    <View
      style={
        [
          {
            "gap": 2,
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "#ffffff",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "flex": 1,
                "fontFamily": "Manrope-SemiBold",
                "fontSize": 16,
              },
              {
                "color": "#111827",
              },
              false,
            ]
          }
          testID="drug-primary-name"
        >
          Amoxicillin
        </Text>
        <Pressable
          accessibilityLabel="drug.addBookmark"
          accessibilityRole="button"
          accessibilityState={
            {
              "selected": false,
            }
          }
          hitSlop={10}
          onClick={[Function]}
          style={
            {
              "padding": 2,
            }
          }
          testID="bookmark-toggle"
        >
          <View
            testID="icon-Heart"
          />
        </Pressable>
      </View>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Manrope",
              "fontSize": 12,
              "marginTop": 1,
            },
            {
              "color": "#9ca3af",
              "textAlign": "left",
              "writingDirection": "ltr",
            },
          ]
        }
        testID="drug-meta"
      >
        J01CA04
         · 
        Antibacterials
         · Capsule 500mg, Suspension 250mg/5ml
      </Text>
    </View>
  </View>
</Pressable>
`;

exports[`DrugCard — restyle snapshots > RTL snapshot (lang=ar, with localName) 1`] = `
<Pressable
  accessibilityLabel="Simvastatin, Lipid-modifying agents"
  accessibilityRole="button"
  onClick={[MockFunction spy]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="drug-card-C10AA01"
>
  <View
    accessibilityRole="none"
  >
    <View
      style={
        [
          {
            "gap": 2,
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "#ffffff",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "flex": 1,
                "fontFamily": "Manrope-SemiBold",
                "fontSize": 16,
              },
              {
                "color": "#111827",
              },
              {
                "fontFamily": "NotoKufiArabic",
                "textAlign": "right",
                "writingDirection": "rtl",
              },
            ]
          }
          testID="drug-primary-name"
        >
          سيمفاستاتين
        </Text>
        <Pressable
          accessibilityLabel="drug.addBookmark"
          accessibilityRole="button"
          accessibilityState={
            {
              "selected": false,
            }
          }
          hitSlop={10}
          onClick={[Function]}
          style={
            {
              "padding": 2,
            }
          }
          testID="bookmark-toggle"
        >
          <View
            testID="icon-Heart"
          />
        </Pressable>
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Manrope",
              "fontSize": 14,
            },
            {
              "color": "#6b7280",
            },
          ]
        }
        testID="drug-secondary-name"
      >
        Simvastatin
      </Text>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Manrope",
              "fontSize": 12,
              "marginTop": 1,
            },
            {
              "color": "#9ca3af",
              "textAlign": "right",
              "writingDirection": "ltr",
            },
          ]
        }
        testID="drug-meta"
      >
        C10AA01
         · 
        Lipid-modifying agents
         · Tablet 20mg
      </Text>
    </View>
  </View>
</Pressable>
`;
